--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adventure Game Embed</title>
+  <title>Nishant MKL 💨</title>
   <style>
     body, html {
       margin: 0;
@@ -29,10 +29,10 @@
   </style>
 </head>
 <body>
-  <h1>Play Nyamo's Adventure!</h1>
+  <h1>Play Minecraft Classic!</h1>
 
-  <!-- Embed Nyamo's Adventure Game -->
-  <iframe src="https://ddrkirbyisq.itch.io/nyamos-adventure?embed" width="800" height="600" frameborder="0" allowfullscreen="true"></iframe>
+  <!-- Embed Minecraft Classic Game -->
+  <iframe src="https://classic.minecraft.net" width="100%" height="100%" frameborder="0" allowfullscreen="true"></iframe>
 
 </body>
 </html>
