--- a/index.html
+++ b/index.html
@@ -3,36 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nishant MKL 💨</title>
+  <title>Slow Road Game Embed</title>
   <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      background-color: #f4f4f4;
+    body {
       font-family: Arial, sans-serif;
-    }
-
-    h1 {
       text-align: center;
-      margin-top: 20px;
-      font-size: 24px;
-      color: #333;
     }
-
-    iframe {
-      display: block;
+    #game-container {
       width: 100%;
-      height: 100vh; /* Full viewport height */
-      border: none;
+      height: 600px;
+      margin: 0 auto;
+      border: 1px solid #000;
     }
   </style>
 </head>
 <body>
-  <h1>Play Minecraft Classic!</h1>
-
-  <!-- Embed Minecraft Classic Game -->
-  <iframe src="https://classic.minecraft.net" width="100%" height="100%" frameborder="0" allowfullscreen="true"></iframe>
-
+  <h1>Play SlowRoad.io Game Below!</h1>
+  
+  <div id="game-container">
+    <!-- Embed SlowRoad.io game (replace with the actual embed URL if available) -->
+    <iframe src="https://slowroad.io" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
+  </div>
+  
 </body>
 </html>
